tg_parser/tests/invalid/wrong_terminal_order.tg
gate BadOrder(in a; out y) {
    pmos gate=a, drain=y, source=VDD;
}
